# sol-merkle-cli

./: Cargo.toml
src/: data_structures.rs  main.rs
