[package]
name = "Sol-Merkle"
version = "0.1.0"
edition = "2021"
description = "A command line tool for generating Merkle Trees, Proofs, and Verifier based on Ethereum's keccak256 & ABI encoding."

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
serde_json = "1.0"
ethers = "1.0.2"
serde = { version = "1.0.159", features = ["derive"] }
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
